--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@
     align-items: center;
     margin-bottom: 2rem;
     background-color: #0077be;
+    border-radius: 0.3rem;
     padding-left: 0.5rem;
   }
   
@@ -97,8 +98,10 @@
     flex-basis: 30%;
     margin-bottom: 1rem;
     padding: 1rem;
-    background-color: #0077be;
+    background-color: #f5f5f5;
     text-align: center;
+    border-radius: 0.3rem;
+    background-color: #0077be;
   }
   
   .forecast-card h3 {
